Added different card types, no styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
 	</head>
 	<body>
-		Hello world!
+		<div class="header-card card">
+			What's the time?
+		</div>
+		<div class="card">
+			12:00:00
+		</div>
+		<div class="footer-card card">
+			A Footer.
+		</div>
 	</body>
 </html>
