Added h tags to text in cards

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	</head>
 	<body>
 		<div class="header-card card">
-			What's the time?
+			<h1>What's the time?</h1>
 		</div>
 		<div class="card">
-			12:00:00
+			<h2>12:00:00</h2>
 		</div>
 		<div class="footer-card card">
 			A Footer.
