Now displays UTC time

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
 	<head>
-
 	</head>
 	<body>
 		<div class="header-card card">
 			<h1>What's the time?</h1>
 		</div>
-		<div class="card">
-			<h2>12:00:00</h2>
+		<div class="card" id="utc">
+			<h2 id="digital"></h2>
 		</div>
 		<div class="footer-card card">
 			A Footer.
 		</div>
+
+
+		<script src="scripts/time.js"></script>
 	</body>
 </html>
